onebus/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onebus
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: onebus
  template:
    metadata:
      labels:
        app: onebus
    spec:
      containers:
        - name: onebus
          image: ghcr.io/pmh-only/onebus:latest
