onebus/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: onebus-worker
spec:
  serviceName: onebus-worker
  revisionHistoryLimit: 0
  replicas: 3
  selector:
    matchLabels:
      app: onebus-worker
  template:
    metadata:
      labels:
        app: onebus-worker
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - onebus-worker
              topologyKey: kubernetes.io/hostname
      containers:
        - name: onebus-worker
          image: ghcr.io/pmh-only/onebus:latest
